ingress/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: nginx-app-v1.info
      http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: app-v1
                port:
                  number: 8080

    - host: nginx-app-v1.info
      http:
        paths:
          - path: /test1
            pathType: Prefix
            backend:
              service:
                name: api-server-svc
                port:
                  number: 9090
